--- a/react-app/src/components/Products/Products.css
+++ b/react-app/src/components/Products/Products.css
@@ -14,15 +14,41 @@
 
 .product-cards-container {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     max-width: 950px;
+    margin: auto;
+    row-gap: 30px;
+    column-gap: 25px;
+}
+
+.sub-category-header{
+    text-align: center;
+    font-size: 30px;
+    font-weight: bolder;
+    color: rgb(54, 124, 152)
 }
 
 .product-card {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 33.33%;
     max-width: 300px;
     max-height: 450px;
+    height: 100%;
+    width: 100%;
+
+}
+
+.product-img {
+    max-height: 175px;
     width: 100%;
     height: 100%;
+}
+
+.product-info{
+    display: flex;
+    flex-direction: column;
 }
