--- a/react-app/src/components/Products/Products.css
+++ b/react-app/src/components/Products/Products.css
@@ -28,7 +28,8 @@
     text-align: center;
     font-size: 30px;
     font-weight: bolder;
-    color: rgb(54, 124, 152)
+    letter-spacing: 5px;
+    color: rgb(54, 124, 152);
 }
 
 .product-card {
@@ -51,4 +52,74 @@
 .product-info{
     display: flex;
     flex-direction: column;
+    gap: 10px;
+    padding: 10px 0 10px 0;
+}
+
+#product-origin {
+    font-size: 12px;
+    font-weight: 300;
+    letter-spacing: 3px;
+}
+
+.product-card-link {
+    text-decoration: none;
+    color:rgb(54, 124, 152);
+}
+
+.info-divider {
+    list-style: none;
+    height: 1px;
+    background-color: black;
+    width: 8%;
+    margin-top: -5px;
+}
+
+.inner-info{
+    display: flex;
+    justify-content: space-between;
+    font-size: 12px;
+    padding-bottom: 40px;
+}
+
+#product-price{
+    color:  rgb(75, 134, 158)
+}
+
+.product-page-buttons{
+    display: flex;
+    justify-content: space-between;
+    border: 1px black solid;
+    height: 40px;
+}
+
+.counter-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+}
+
+.counter-container > button{
+    background-color: white;
+    border: none;
+    width: 40px;
+    font-size: 15px;
+}
+
+#minus{
+    color: rgb(53, 51, 51);
+}
+
+#plus{
+    font-size: 25px;
+}
+
+.add-to-cart{
+    width: 50%;
+    height: 100%;
+    color: white;
+    background-color: rgb(54, 124, 152);
+    border: none;
 }
