--- a/react-app/src/components/Products/Products.css
+++ b/react-app/src/components/Products/Products.css
@@ -29,7 +29,8 @@
     font-size: 30px;
     font-weight: bolder;
     letter-spacing: 5px;
-    color: rgb(54, 124, 152);
+    color: rgb(40, 96, 117);
+    text-shadow: (0 0 0 / 40%) 0px 4px 5px
 }
 
 .product-card {
@@ -65,6 +66,10 @@
 .product-card-link {
     text-decoration: none;
     color:rgb(54, 124, 152);
+}
+
+.product-card-link:hover {
+    color:rgb(14, 56, 135);
 }
 
 .info-divider {
@@ -114,12 +119,18 @@
 
 #plus{
     font-size: 25px;
+    font-weight: 100;
 }
 
 .add-to-cart{
     width: 50%;
     height: 100%;
     color: white;
-    background-color: rgb(54, 124, 152);
+    background-color: rgb(40, 96, 117);
     border: none;
+    font-size: 15px;
+}
+
+.add-to-cart:hover{
+    background-color: rgb(79, 141, 163);
 }
