--- a/react-app/src/components/Products/Products.css
+++ b/react-app/src/components/Products/Products.css
@@ -60,15 +60,14 @@
     flex-basis: 33.33%;
     max-width: 300px;
     max-height: 450px;
-    height: 100%;
-    width: 100%;
-
+    /* height: 100%;
+    width: 100%; */
 }
 
 .product-img {
     max-height: 175px;
-    min-width: 100%;
-    min-height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .product-info {
