--- a/react-app/src/components/ProductDetails/ProductDetails.css
+++ b/react-app/src/components/ProductDetails/ProductDetails.css
@@ -22,6 +22,7 @@
     max-height: 350px;
     width: 100%;
     height: 100%;
+    border-radius: 22px;
 }
 
 .details-info{
@@ -47,7 +48,7 @@
     max-width: 400px;
     height: 40px;
     width: 100%;
-    justify-content: flex-end;
+    justify-self: flex-end;
 }
 
 .details-add-to-cart{
@@ -59,4 +60,26 @@
     background-color: rgb(55, 111, 132);
     border: none;
     font-size: 15px;
+    border-radius: 11px;
+}
+
+.review-buttons{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 20px 0 100px 25px;
+    max-width: 1000px;
+    width: 100%;
+    margin: auto;
+    gap: 50px;
+
+}
+
+.detail-page-buttons {
+    display: flex;
+    list-style: none;
+    border: 1px solid rgb(230, 223, 223);
+    padding: 8px;
+    cursor: pointer;
+    border-radius: 22px;
 }
