--- a/react-app/src/components/Reviews/Reviews.css
+++ b/react-app/src/components/Reviews/Reviews.css
@@ -4,8 +4,29 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    padding: 20px 0 0 15px;
+    padding: 20px 0 0 25px;
     max-width: 1000px;
     width: 100%;
     margin: auto;
+}
+
+.review-card{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 8px;
+    border: 1px solid rgb(230, 223, 223);
+    max-width: 500px;
+    width: 100%;
+    border-radius: 11px;
+}
+
+#user-name{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#date{
+    font-size: 12px;
+    color: grey;
 }
