--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,1 +1,8 @@
-/* TODO Add site wide styles */
+body{
+    margin: 0;
+    font-family: Nunito Sans,sans-serif;
+}
+
+button:hover {
+    cursor: pointer;
+}
