--- a/react-app/src/components/SplashPage/SplashPage.css
+++ b/react-app/src/components/SplashPage/SplashPage.css
@@ -1,41 +1,88 @@
-.splash-page-container{
+.splash-page-container {
     display: flex;
+    flex-direction: column;
     width: 100vw;
     height: 80vh;
+    margin: auto;
 }
 
-.splash-img{
+.splash-img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.splash-header-container{
+.splash-header-container {
     display: flex;
     width: 100%;
-    height: 80%;
+    height: 75%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     position: absolute;
     color: white;
     letter-spacing: 3px;
-    text-shadow: 0px 4px 5px rgb(112, 110, 110);
+    text-shadow: 0px 2px 6px rgb(52, 50, 50);
 }
 
-.top-header{
-    width: 500px;
+.top-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     font-size: 20px;
     letter-spacing: 5px;
 }
 
-.top-header>h1 {
-    width: 100%;
+.splash-header1 {
+    letter-spacing: 9px;
 }
 
-.splash-header-divider{
+.splash-header3 {
+    letter-spacing: 9px;
+}
+
+.splash-header5 {
+    letter-spacing: 12px;
+}
+
+.splash-header-divider {
     list-style: none;
     height: 3px;
     background-color: white;
-    width: 500px;
+    width: 420px;
+}
+
+.splash-bottom-row {
+    display: flex;
+    flex-direction: row;
+}
+
+.splash-bottom-info-container{
+    display: flex;
+    flex-basis: 25%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.bottom-headers{
+    font-size: 20px;
+    font-weight: 100;
+    letter-spacing: 1px;
+    color: rgb(40, 96, 117);
+    text-align: center;
+    width: 50%;
+    line-height: 1.6em;
+}
+
+.bottom-info{
+    font-weight: 100;
+    font-size: 16px;
+    text-align: center;
+    line-height: 1.6em;
+    width: 50%;
+}
+
+.bottom-img{
+    flex-basis: 25%;
 }
