--- a/react-app/src/components/Products/Products.css
+++ b/react-app/src/components/Products/Products.css
@@ -58,11 +58,13 @@
 .product-card {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     flex-basis: calc(33.33% - 30px);
     /* max-width: 300px;
     max-height: 450px; */
+    width: calc(100% - 66.66%);
+    max-height: 350px;
     height: 100%;
-    width: 100%;
 }
 
 .product-img {
@@ -70,7 +72,7 @@
     max-height: 175px;
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
 }
 
 .product-info {
