--- a/react-app/src/components/ProductDetails/ProductDetails.css
+++ b/react-app/src/components/ProductDetails/ProductDetails.css
@@ -43,17 +43,10 @@
     padding-top: 15px;
 }
 
-.details-button-container{
-    display: flex;
-    max-width: 400px;
-    height: 40px;
-    width: 100%;
-    justify-self: flex-end;
-}
-
 .details-add-to-cart{
     display: flex;
     width: 100%;
+    height: 40px;
     justify-content: center;
     align-items: center;
     color: white;
@@ -61,6 +54,7 @@
     border: none;
     font-size: 15px;
     border-radius: 11px;
+    margin-top: 50px;
 }
 
 .review-buttons{
