--- a/react-app/src/components/SplashPage/SplashPage.css
+++ b/react-app/src/components/SplashPage/SplashPage.css
@@ -1,25 +1,20 @@
-.splash-page-container {
+/* .splash-page-container {
     display: flex;
     flex-direction: column;
     width: 100vw;
     height: 80vh;
     margin: auto;
-}
-
-.splash-img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+} */
 
 .splash-header-container {
+    background-image: url('../../assets/Splash1.png');
+    background-size: cover;
+    background-position: center;
     display: flex;
     width: 100%;
-    height: 75%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: absolute;
     color: white;
     letter-spacing: 3px;
     text-shadow: 0px 2px 6px rgb(52, 50, 50);
@@ -52,6 +47,14 @@
     width: 420px;
 }
 
+.splash-header-divider-bottom {
+    list-style: none;
+    height: 3px;
+    background-color: white;
+    width: 420px;
+    margin-bottom: 25px;
+}
+
 .splash-bottom-row {
     display: flex;
     flex-direction: row;
@@ -71,7 +74,7 @@
     letter-spacing: 1px;
     color: rgb(40, 96, 117);
     text-align: center;
-    width: 50%;
+    width: 60%;
     line-height: 1.6em;
 }
 
@@ -80,7 +83,7 @@
     font-size: 16px;
     text-align: center;
     line-height: 1.6em;
-    width: 50%;
+    width: 60%;
 }
 
 .bottom-img{
