--- a/react-app/src/components/NavigationBar/NavigationBar.css
+++ b/react-app/src/components/NavigationBar/NavigationBar.css
@@ -1,8 +1,3 @@
-/*
-button:hover {
-    cursor: pointer;
-} */
-
 .nav-link:hover {
     cursor: pointer;
 }
@@ -60,4 +55,14 @@ button:hover {
     display: flex;
     align-items: center;
     gap: 15px;
+}
+
+.nav-cart{
+    position: relative;
+}
+
+.num-in-cart{
+    position: absolute;
+    left: 13px;
+    font-size: 10px;
 }
