--- a/react-app/src/components/NavigationBar/NavigationBar.css
+++ b/react-app/src/components/NavigationBar/NavigationBar.css
@@ -9,12 +9,17 @@
     align-items: center;
     position: sticky;
     top: 0;
-    height: 40px;
+    height: 50px;
     padding: 5px 60px 5px 60px;
     /* width: 100vw; */
     border-bottom: 1px solid rgb(209, 204, 204);
     background-color: white;
     z-index: 10;
+}
+
+.product-list{
+    display: flex;
+    align-items: center;
 }
 
 .nav-link {
@@ -28,6 +33,10 @@
 
 .nav-link:link {
     text-decoration: none;
+}
+
+.fish-icon{
+    width: 40px;
 }
 
 .search-icon-container{
