--- a/react-app/src/components/Products/Products.css
+++ b/react-app/src/components/Products/Products.css
@@ -60,17 +60,18 @@
     flex-direction: column;
     justify-content: center;
     flex-basis: calc(33.33% - 30px);
-    /* max-width: 300px;
-    max-height: 450px; */
+    /* max-width: 300px; */
     width: calc(100% - 66.66%);
-    max-height: 350px;
-    height: 100%;
+    /* width: 300px; */
+    height: 350px;
+    /* height: 100%; */
 }
 
 .product-img {
     width: 100%;
-    height: 100%;
+    height: 200px;
     object-fit: cover;
+    overflow: hidden;
 }
 
 .product-info {
