--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -6,3 +6,9 @@ body{
 button:hover {
     cursor: pointer;
 }
+
+.main-container{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
