--- a/react-app/src/components/Footer/Footer.css
+++ b/react-app/src/components/Footer/Footer.css
@@ -1,7 +1,11 @@
-.footer-container {
+
+.footer {
+    /* position: absolute;
+    bottom: 0; */
+    flex-shrink: 0;
+    width: 100%;
     display: flex;
     background-color: #1a1a1a;
-    height: 100px;
     justify-content: space-evenly;
     padding-top: 10px;
 }
