--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -8,7 +8,7 @@ button:hover {
 }
 
 .main-container{
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     min-height: 100vh;
 }
