--- a/react-app/src/components/CheckoutPage/CheckoutPage.css
+++ b/react-app/src/components/CheckoutPage/CheckoutPage.css
@@ -21,6 +21,7 @@
     margin-bottom: 20px;
     padding: 40px;
     gap: 20px;
+    overflow-y:scroll;
 }
 
 .checkout-cart-items {
@@ -82,6 +83,10 @@
     display: flex;
     align-items: center;
     font-size: 20px;
+    /* position: sticky;
+    bottom: 0;
+    background-color: white;
+    outline:rgb(79, 141, 163) solid 2px; */
 }
 
 .usd-total {
@@ -140,5 +145,6 @@
     font-size: 15px;
     font-weight: 100;
     letter-spacing: 2px;
+    margin: auto;
 
 }
