--- a/react-app/src/components/Products/Products.css
+++ b/react-app/src/components/Products/Products.css
@@ -107,6 +107,7 @@
 .inner-info {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     font-size: 12px;
     padding-bottom: 40px;
 }
@@ -115,14 +116,25 @@
     color: rgb(75, 134, 158)
 }
 
+.product-page-avgrating{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.the-stars{
+    display: flex;
+    align-items: center;
+}
+
 .product-page-buttons {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     border: 1px black solid;
     height: 40px;
 }
 
-.counter-container {
+/* .counter-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -135,7 +147,7 @@
     border: none;
     width: 40px;
     font-size: 15px;
-}
+} */
 
 
 #plus {
@@ -144,7 +156,7 @@
 }
 
 .add-to-cart {
-    width: 50%;
+    width: 100%;
     height: 100%;
     color: white;
     background-color: rgb(40, 96, 117);
