--- a/react-app/src/components/CheckoutPage/CheckoutPage.css
+++ b/react-app/src/components/CheckoutPage/CheckoutPage.css
@@ -47,6 +47,8 @@
 
 .cart-page-img {
     width: 100px;
+    height: 66px;
+    object-fit: cover;
     border-radius: 15px;
 }
 
@@ -83,11 +85,12 @@
     display: flex;
     align-items: center;
     font-size: 20px;
-    /* position: sticky;
+    position: sticky;
     bottom: 0;
     background-color: white;
-    outline:rgb(79, 141, 163) solid 2px; */
+    outline:rgb(79, 141, 163) solid 2px;
 }
+
 
 .usd-total {
     display: flex;
