--- a/react-app/src/components/Products/Products.css
+++ b/react-app/src/components/Products/Products.css
@@ -133,7 +133,7 @@
     height: 40px;
 }
 
-.counter-container {
+/* .counter-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -146,16 +146,16 @@
     border: none;
     width: 40px;
     font-size: 15px;
-}
+} */
 
 
-#plus {
+/* #plus {
     font-size: 25px;
     font-weight: 100;
-}
+} */
 
 .add-to-cart {
-    width: 50%;
+    width: 100%;
     height: 100%;
     color: white;
     background-color: rgb(40, 96, 117);
