--- a/react-app/src/components/auth/Forms.css
+++ b/react-app/src/components/auth/Forms.css
@@ -68,6 +68,11 @@ input:focus {
     margin-top: 15px;
 }
 
+.form-button:hover {
+    background-color: rgb(136, 193, 213);
+}
+
+
 .to-signup{
     display: flex;
     gap: 10px;
