modal css adjustments

--- a/react-app/src/components/auth/Forms.css
+++ b/react-app/src/components/auth/Forms.css
@@ -39,8 +39,8 @@
     opacity: 0;
     background: rgba(255,255,255,0);
     pointer-events: none;
-    transform: translateY(3px);
-    transition: all .3s ease-in-out;
+    /* transform: translateY(3px);
+    transition: all .3s ease-in-out; */
 }
 
 input:focus {
@@ -55,6 +55,14 @@ input:focus {
     width: 100%;
     padding: 10px;
     border: .5px solid;
+}
+
+
+.form-button-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 }
 
 .form-button{
