--- a/react-app/src/components/Address/Address.css
+++ b/react-app/src/components/Address/Address.css
@@ -22,7 +22,11 @@
     font-weight: 100;
 }
 
-.add-address-button {
+.add-address-modal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
     color: white;
     background-color: rgb(79, 141, 163);
     border: 1px black solid;
