--- a/react-app/src/components/Context/ModalForms.css
+++ b/react-app/src/components/Context/ModalForms.css
@@ -6,11 +6,17 @@
     border-radius: 12px;
 }
 
-.login-container {
-    text-align: left;
+.review-modal-container {
     padding: 24px;
-    width: 568px;
+    width: 500px;
     height: 400px;
+    overflow-y: auto;
+}
+
+.address-form-container {
+    padding: 24px;
+    width: 500px;
+    height: 600px;
     overflow-y: auto;
 }
 
@@ -44,43 +50,11 @@
     margin: 20px -24px 40px;
 }
 
-.fields {
-    border: 1px solid #bababa;
-    font-size: 18px;
-    padding-left: 10px;
-    width: 100%;
-    height: 52px;
-    border-bottom: none;
-}
-
-.fields-top {
-    border: 1px solid #bababa;
-    font-size: 18px;
-    padding-left: 10px;
-    width: 100%;
-    height: 52px;
-    border-radius: 8px 8px 0 0;
-    border-bottom: none;
-}
-
-.fields-bottom {
-    border: 1px solid #bababa;
-    font-size: 18px;
-    padding-left: 10px;
-    width: 100%;
-    height: 52px;
-    border-radius: 0 0 8px 8px;
-}
-
-
 .field-buttons {
-    display: block;
-    position: sticky;
-    bottom: 0;
     color: white;
     border: none;
     font-size: 18px;
-    width: 100%;
+    width: 400px;
     height: 48px;
     margin-top: 30px;
     border-radius: 6px;
@@ -88,11 +62,6 @@
     background-color: rgb(55, 111, 132);
 }
 
-/* input:focus,
-input::placeholder{
-    transform: translateY(-5px) translateX(10px) scale(0.75);
-} */
-
-label {
-    transform: translate(0, -2.75rem);
+.form-input-bool-container-modal{
+    padding: 5px 0 0 25px;
 }
