--- a/react-app/src/components/CheckoutPage/CheckoutPage.css
+++ b/react-app/src/components/CheckoutPage/CheckoutPage.css
@@ -14,7 +14,6 @@
     display: flex;
     flex-direction: column;
     flex-basis: 55%;
-    padding-top: 40px;
     width: 100%;
     justify-content: center;
     align-items: center;
@@ -107,6 +106,8 @@
     bottom: 0;
     background-color: white;
     outline: rgb(79, 141, 163) solid 2px;
+    width: 390px;
+    padding: 5px;
 }
 
 
@@ -115,7 +116,6 @@
     align-items: flex-end;
     font-size: 25px;
     margin-left: auto;
-    padding-right: 150px;
     gap: 10px;
 }
 
