--- a/react-app/src/components/CheckoutPage/CheckoutPage.css
+++ b/react-app/src/components/CheckoutPage/CheckoutPage.css
@@ -10,6 +10,22 @@
     padding: 0 0 30px 0;
 }
 
+.saved-addresses-container {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    font-weight: 100;
+    font-size: 12px;
+    width: 400px;
+    overflow-x: hidden;
+    padding: 0 0 12px 0;
+}
+
+#shipping-header {
+    padding: 0 0 12px 0;
+    text-decoration: underline;
+}
+
 .checkout-address-container {
     display: flex;
     flex-direction: column;
