--- a/react-app/src/components/CheckoutPage/CheckoutPage.css
+++ b/react-app/src/components/CheckoutPage/CheckoutPage.css
@@ -10,6 +10,12 @@
     padding: 0 0 30px 0;
 }
 
+.login-redirect {
+    display: flex;
+    
+}
+
+
 .saved-addresses-container {
     display: flex;
     flex-direction: column;
@@ -38,6 +44,8 @@
 .shipping-container {
     display: flex;
     flex-direction: column;
+    height: 100vh;
+    overflow: scroll;
 }
 
 .shipping-form-container {
@@ -50,6 +58,7 @@
     display: flex;
     flex-direction: column;
     flex-basis: 45%;
+    height: 100vh;
     background-color: rgb(242, 236, 236);
     margin-bottom: 20px;
     padding: 40px;
@@ -122,7 +131,7 @@
     bottom: 0;
     background-color: white;
     outline: rgb(79, 141, 163) solid 2px;
-    width: 390px;
+    width: 420px;
     padding: 8px;
 }
 
@@ -143,9 +152,9 @@
 
 .checkout-address-header {
     font-weight: 100;
-    font-size: 35px;
+    font-size: 30px;
     text-align: center;
-    padding-bottom: 25px;
+    padding: 20px 0 20px 0;
 }
 
 
@@ -174,7 +183,7 @@
 }
 
 .checkout-button-container{
-    padding: 30px 0 0 100px;
+    padding: 30px 0 30px 100px;
 }
 
 .checkout-checkout-button {
