--- a/react-app/src/components/CheckoutPage/CheckoutPage.css
+++ b/react-app/src/components/CheckoutPage/CheckoutPage.css
@@ -4,17 +4,18 @@
     height: 100vh;
 
 }
+
 .checkout-contact-info-container {
     display: flex;
     flex-direction: column;
+    /* justify-content: center;
+    align-items: center; */
     padding: 0 0 30px 0;
 }
 
-.login-redirect {
-    display: flex;
-    
+.checkout-login-nav-link{
+    width: 360px;
 }
-
 
 .saved-addresses-container {
     display: flex;
@@ -182,7 +183,7 @@
     align-items: flex-start;
 }
 
-.checkout-button-container{
+.checkout-button-container {
     padding: 30px 0 30px 100px;
 }
 
@@ -198,6 +199,6 @@
     margin: auto;
 }
 
-.checkout-checkout-button:hover{
+.checkout-checkout-button:hover {
     background-color: rgb(136, 193, 213);
 }
