--- a/react-app/src/components/Address/Address.css
+++ b/react-app/src/components/Address/Address.css
@@ -10,14 +10,14 @@
     margin: auto;
 }
 
-.address-page-header{
+.address-page-header {
     display: flex;
     flex-direction: column;
     gap: 30px;
     padding: 30px 0 0 0;
 }
 
-#my-address{
+#my-address {
     font-size: 20px;
     font-weight: 100;
 }
@@ -51,13 +51,13 @@
     list-style: none;
 }
 
-.address-cards-container{
+.address-cards-container {
     display: flex;
     gap: 100px;
     padding: 40px 0 0 0;
 }
 
-.address-cards{
+.address-cards {
     display: flex;
     flex-direction: column;
     padding: 30px 0 0 0;
@@ -66,7 +66,7 @@
     font-weight: 100;
 }
 
-.edit-delete-address{
+.edit-delete-address {
     display: flex;
     gap: 20px;
     list-style-type: none;
@@ -75,6 +75,6 @@
     font-weight: bold;
 }
 
-.edit-delete-address:hover{
+.modify-address-modal:hover{
     cursor: pointer;
 }
