--- a/react-app/src/components/CheckoutPage/CheckoutPage.css
+++ b/react-app/src/components/CheckoutPage/CheckoutPage.css
@@ -31,6 +31,12 @@
     text-decoration: underline;
 }
 
+#address-list{
+    display: flex;
+    height: 30px;
+    align-items: center;
+}
+
 .checkout-address-container {
     display: flex;
     flex-direction: column;
@@ -45,6 +51,14 @@
     flex-direction: column;
     height: 100vh;
     overflow: scroll;
+}
+
+.back-to-cart{
+    padding: 0 0 20px 0;
+}
+
+.back-to-cart:hover{
+    color:rgb(79, 141, 163)
 }
 
 .shipping-form-container {
@@ -130,7 +144,7 @@
     bottom: 0;
     background-color: white;
     outline: rgb(79, 141, 163) solid 2px;
-    width: 420px;
+    width: calc(100% - 150px);
     padding: 8px;
 }
 
@@ -182,7 +196,7 @@
 }
 
 .checkout-button-container {
-    padding: 30px 0 30px 100px;
+    padding: 30px 0 30px 0;
 }
 
 .checkout-checkout-button {
