--- a/react-app/src/components/Profile/Profile.css
+++ b/react-app/src/components/Profile/Profile.css
@@ -1,6 +1,5 @@
 .profile-container{
     display: flex;
-    /* flex-wrap: wrap; */
     flex-direction: column;
     padding-top: 20px;
     max-width: 1000px;
@@ -87,4 +86,50 @@
 
 .logout-button:hover {
     background-color: rgb(136, 193, 213);
+}
+
+.order-history-container{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    letter-spacing: 3px;
+    font-weight: 100;
+    padding: 60px 50px 0 0;
+
+}
+
+.orders-header{
+    display: flex;
+    justify-content: space-between;
+    font-size: 12px;
+    padding: 0 0 10px 0;
+}
+
+.order-date{
+    display: flex;
+    gap: 100px;
+}
+
+.order-divider {
+    background-color: rgb(194, 186, 186);
+    height: 1px;
+    width: 100%;
+    list-style: none;
+}
+
+.orders-list{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px 0 0 0;
+    font-size: 12px;
+}
+
+.order-cards{
+    display: flex;
+}
+
+.order-date-card{
+    display: flex;
+    gap: 88px;
 }
