--- a/react-app/src/components/OrderDetails/OrderDetails.css
+++ b/react-app/src/components/OrderDetails/OrderDetails.css
@@ -107,3 +107,23 @@
     background-color: rgb(136, 193, 213);
     cursor: pointer;
 }
+
+.order-subtotal-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    gap: 15px;
+}
+
+.orders-shipping{
+    display: flex;
+    text-align: right;
+    gap: 52px;
+}
+
+.order-total-price-container{
+    display: flex;
+    text-align: right;
+    gap: 30px;
+}
