--- a/react-app/src/components/ProductDetails/ProductDetails.css
+++ b/react-app/src/components/ProductDetails/ProductDetails.css
@@ -34,6 +34,7 @@
     align-items: flex-start;
     padding-left: 35px;
     letter-spacing: 2px;
+    position: relative;
 }
 
 .details-ratings{
@@ -62,7 +63,8 @@
     justify-content: center;
     align-items: center;
     color: white;
-    background-color: rgb(55, 111, 132);
+    /* background-color: rgb(55, 111, 132); */
+    background-color: transparent;
     border: none;
     font-size: 15px;
     border-radius: 11px;
