--- a/react-app/src/components/Context/Modal.css
+++ b/react-app/src/components/Context/Modal.css
@@ -23,7 +23,7 @@
     background-color: white;
 }
 
-.open-cart-modal-button{
+.open-cart-modal-button {
     display: flex;
     width: 100%;
     height: 40px;
@@ -38,4 +38,17 @@
     position: absolute;
     bottom: 1px;
     letter-spacing: 2px;
+}
+
+.add-cart-top {
+    width: 100% + 12px;
+    height: 100%;
+    color: white;
+    background-color: rgb(40, 96, 117);
+    border: none;
+    font-size: 15px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
