--- a/react-app/src/components/Products/Products.css
+++ b/react-app/src/components/Products/Products.css
@@ -127,8 +127,7 @@
 }
 
 .product-page-buttons {
-    display: flex;
-    justify-content: space-between;
+    position: relative;
     border: 1px black solid;
     height: 40px;
 }
@@ -157,12 +156,11 @@
 .add-to-cart {
     width: 100%;
     height: 100%;
-    color: white;
-    background-color: rgb(40, 96, 117);
+    /* background-color: rgb(40, 96, 117); */
+    background-color: transparent;
     border: none;
-    font-size: 15px;
 }
 
-.add-to-cart:hover {
+/* .add-to-cart:hover {
     background-color: rgb(79, 141, 163);
-}
+} */
