--- a/react-app/src/components/CartModal/CartModal.css
+++ b/react-app/src/components/CartModal/CartModal.css
@@ -7,6 +7,11 @@
     background-color: white;
     z-index: 9999;
     overflow: scroll;
+    transition: transform 1s;
+}
+
+.hidden {
+    transform: translateX(100%);
 }
 
 .modal-cart-header-container {
