--- a/react-app/src/components/CheckoutPage/CheckoutPage.css
+++ b/react-app/src/components/CheckoutPage/CheckoutPage.css
@@ -197,6 +197,8 @@
 
 .checkout-button-container {
     padding: 30px 0 30px 0;
+    position: sticky;
+    bottom: 0;
 }
 
 .checkout-checkout-button {
