--- a/react-app/src/components/Context/Modal.css
+++ b/react-app/src/components/Context/Modal.css
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 9999;
 }
 
 #modal-background {
@@ -16,11 +17,14 @@
     left: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.7);
+    z-index: 9999;
 }
 
 #modal-content {
     position: absolute;
     background-color: white;
+    overflow-y: scroll;
+    z-index: 9999;
 }
 
 .open-cart-modal-button {
