--- a/react-app/src/components/CheckoutPage/CheckoutPage.css
+++ b/react-app/src/components/CheckoutPage/CheckoutPage.css
@@ -187,8 +187,8 @@
 .shipping-container {
     display: flex;
     flex-direction: column;
-    padding: 20px 0 0 100px;
-    align-items: flex-start;
+    padding: 20px 0 0 0px;
+    /* align-items: flex-start; */
 }
 
 .checkout-button-container {
